# unwitch

./: .ghci  Changelog.md  LICENSE  Readme.md  default.nix  makefile  package.yaml  shell.nix  unwitch.cabal
.github/workflows/: ci.yaml
nix/: hpkgs.nix
npins/: default.nix
src/: Unwitch.hs
src/Unwitch/: Constant.hs  Errors.hs  TH.hs  TryEvaluate.hs
src/Unwitch/Convert/: ByteString.hs  CInt.hs  Char.hs  Complex.hs  Double.hs  Fixed.hs  Float.hs  Int.hs  Int16.hs  Int32.hs  Int64.hs  Int8.hs  Integer.hs  LazyByteString.hs  LazyText.hs  Natural.hs  Ratio.hs  ShortByteString.hs  Text.hs  Word.hs  Word16.hs  Word32.hs  Word64.hs  Word8.hs
test/: Spec.hs
test/Test/Convert/: ByteStringSpec.hs  CIntSpec.hs  CharSpec.hs  ComplexSpec.hs  DoubleSpec.hs  FixedSpec.hs  FloatSpec.hs  Int16Spec.hs  Int32Spec.hs  Int64Spec.hs  Int8Spec.hs  IntSpec.hs  IntegerSpec.hs  LazyByteStringSpec.hs  LazyTextSpec.hs  NaturalSpec.hs  PropertySpec.hs  RatioSpec.hs  ShortByteStringSpec.hs  TextSpec.hs  UnboxedSpec.hs  Word16Spec.hs  Word32Spec.hs  Word64Spec.hs  Word8Spec.hs  WordSpec.hs
