cabal-version:      3.0

name:           unwitch
version:        1.0.0
homepage:       https://github.com/jappeace/haskell-unwitch-project#readme
bug-reports:    https://github.com/jappeace/haskell-unwitch-project/issues
author:         Jappie Klooster
maintainer:     jappieklooster@hotmail.com
copyright:      2020 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    Readme.md
    LICENSE
extra-doc-files:
    Changelog.md

source-repository head
  type: git
  location: https://github.com/jappeace/haskell-unwitch-project

common common-options
  default-extensions:
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores
      ImportQualifiedPost

  ghc-options:
    -O2 -Wall -Werror -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings
    -fno-omit-yields

  build-depends:
      base >=4.9.1.0 && <4.22.0

  default-language: Haskell2010

library
  import: common-options
  exposed-modules:
      Unwitch.Convert.Double
      Unwitch.Convert.Float
      Unwitch.Convert.Integer
      Unwitch.Convert.Ratio
      Unwitch.Errors
  other-modules:
      Unwitch
      Unwitch.Constant
  hs-source-dirs:
      src

test-suite unit
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N" -Wno-unused-packages
  other-modules:
      Test.TestSpec
      Paths_unwitch
  hs-source-dirs:
      test
  build-depends:
      hspec,
      hspec-core,
      unwitch
